# qiqstr

./: .env.example  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  AGENTS.md  README.md  TERMS.md  analysis_options.yaml  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle.kts
android/app/: build.gradle  build.gradle.kts
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: colors.dart  feed.dart  login.dart  main.dart  note.dart  profile.dart  publish.dart
lib/constants/: constants.dart  database.dart  giphy_api_key.dart  relays.dart  suggestions.dart
lib/core/: scroll_to_top_notifier.dart
lib/l10n/: app_de.arb  app_en.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_tr.dart  app_tr.arb
lib/models/: build_command.txt  dm_message_model.dart  event_model.dart  event_model.g.dart  following_model.dart  following_model.g.dart  following_model_isar.dart  following_model_isar.g.dart  interaction_model.dart  interaction_model.g.dart  link_preview_model.dart  link_preview_model.g.dart  mute_model.dart  mute_model.g.dart  mute_model_isar.dart  mute_model_isar.g.dart  note_count_model_isar.dart  note_count_model_isar.g.dart  note_model.dart  (+17 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs  hybrid_database.rs  lib.rs
rust/src/api/: cashu.rs  crypto.rs  database.rs  events.rs  image_cache.rs  mod.rs  nip17.rs  nip19.rs  nwc.rs  relay.rs
rust_builder/: pubspec.yaml
(+518 files in other folders)
