[package]
name = "rust_lib_qiqstr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
nostr = { version = "0.44", default-features = false, features = ["std", "nip06", "nip44", "nip59"] }
bip39 = { version = "2", features = ["rand"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde_json = "1"
anyhow = "1"
hex = "0.4"
