[package]
name = "rust_lib_qiqstr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = "=2.11.1"
nostr = { version = "0.44", default-features = false, features = ["std", "nip06", "nip44", "nip59"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip06", "nip44", "nip59"] }
nostr-lmdb = "0.44"
bip39 = { version = "2", features = ["rand"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
hex = "0.4"
futures = "0.3"
aes-gcm = "0.10"
aes = "0.8"
typenum = "1.17"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
